--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 .gradle/
 
 .idea/
+
+build/classes/java/main/AoC_2021/Day10/Day10.class
+
+build/classes/java/main/AoC_2021/Day11/Day11.class
+
+build/classes/java/main/AoC_2021/Day12/Day12.class
+
+build/classes/java/main/AoC_2021/Day12/Node.class
+
+build/classes/java/main/AoC_2021/Day13/Day13.class
+
+build/classes/java/main/AoC_2021/Day14/Day14.class
+
+build/classes/java/main/AoC_2021/Day15/Day15.class
+
+build/classes/java/main/AoC_2021/Day15/Node.class
