--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,77 @@ build/classes/java/main/AoC_2021/Day14/Day14.class
 build/classes/java/main/AoC_2021/Day15/Day15.class
 
 build/classes/java/main/AoC_2021/Day15/Node.class
+
+build/test-results/test/binary/
+
+build/classes/java/main/AoC_2021/Day16/Day16.class
+
+build/classes/java/main/AoC_2021/Day17/Day17.class
+
+build/classes/java/main/AoC_2021/Day3/Day3.class
+
+build/classes/java/main/AoC_2021/Day4/Day4.class
+
+build/classes/java/main/AoC_2021/Day5/Day5.class
+
+build/classes/java/main/AoC_2021/Day6/Day6.class
+
+build/classes/java/main/AoC_2021/Day7/Day7.class
+
+build/classes/java/main/AoC_2021/Day8/Day8.class
+
+build/classes/java/main/AoC_2021/Day9/Day9.class
+
+build/classes/java/main/commons/AdaptablePQ.class
+
+build/classes/java/main/commons/AdaptablePQ$PQEntry.class
+
+build/classes/java/main/commons/Edge.class
+
+build/classes/java/main/commons/Graph.class
+
+build/classes/java/main/commons/UnionFind.class
+
+build/classes/java/main/commons/Vertex.class
+
+build/classes/java/main/commons/VertexNumPair.class
+
+build/classes/java/main/graphs/Dijkstra.class
+
+build/classes/java/main/graphs/Kruskal.class
+
+build/classes/java/main/graphs/Traversals.class
+
+build/classes/java/main/interview/AsteroidsCollision.class
+
+build/classes/java/main/interview/ATM.class
+
+build/classes/java/main/interview/JumpGame.class
+
+build/classes/java/main/Main.class
+
+build/classes/java/main/sort/InsertionSort.class
+
+build/classes/java/main/sort/RadixSortLSD.class
+
+build/classes/java/main/sort/RadixSortMSD.class
+
+build/classes/java/test/interview/JumpGameTest.class
+
+build/reports/tests/test/classes/interview.JumpGameTest.html
+
+build/reports/tests/test/css/base-style.css
+
+build/reports/tests/test/css/style.css
+
+build/reports/tests/test/index.html
+
+build/reports/tests/test/js/report.js
+
+build/reports/tests/test/packages/interview.html
+
+build/test-results/test/TEST-interview.JumpGameTest.xml
+
+build/tmp/compileJava/previous-compilation-data.bin
+
+build/tmp/compileTestJava/previous-compilation-data.bin
