--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@ build/test-results/test/TEST-interview.JumpGameTest.xml
 build/tmp/compileJava/previous-compilation-data.bin
 
 build/tmp/compileTestJava/previous-compilation-data.bin
+
+*.class
